--- a/src/dmv-maze.html
+++ b/src/dmv-maze.html
@@ -8,14 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            padding-top: 80px;
+            padding: 80px 20px 20px 20px;
             overflow-x: auto;
             overflow-y: auto;
             background: #0a0a0a;
             color: #7ec8e3;
             font-family: 'Courier Prime', monospace;
             margin: 0;
-            padding: 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -269,11 +268,16 @@
                 padding: 10px;
                 min-height: 50px;
             }
+
+            #gameCanvas {
+                max-width: 95vw;
+                height: auto;
+            }
         }
 
         @media (max-width: 480px) {
             body {
-                padding: 10px;
+                padding: 60px 5px 20px 5px;
             }
 
             .game-header h1 {
@@ -307,7 +311,7 @@
             <p class="subtitle">Please take a number and wait for your turn...</p>
         </div>
 
-        <canvas id="gameCanvas" width="600" height="600"></canvas>
+        <canvas id="gameCanvas" width="400" height="400"></canvas>
 
         <div class="mobile-controls-label">Tap arrows to navigate →</div>
         <div class="mobile-controls" id="mobileControls">
