--- a/src/double_dragon_beatem_up.html
+++ b/src/double_dragon_beatem_up.html
@@ -164,11 +164,11 @@
         }
 
         .overlay-btn {
-            padding: 15px 40px;
+            padding: 12px 30px;
             background: #ff0000;
             border: 3px solid #ffff00;
             color: white;
-            font-size: 18px;
+            font-size: 0.9em;
             font-family: inherit;
             font-weight: bold;
             border-radius: 8px;
