--- a/src/frog_whack_a_mole.html
+++ b/src/frog_whack_a_mole.html
@@ -435,22 +435,6 @@
         </header>
 
         <div class="demo-section">
-            <h2>📖 How to Play</h2>
-            <div class="instructions">
-                <h3>Game Rules:</h3>
-                <ol>
-                    <li>Select your preferred difficulty level (Easy, Medium, Hard)</li>
-                    <li>Click the "Start Game" button to begin</li>
-                    <li>Watch for frogs to pop up in the holes</li>
-                    <li>Click on each frog as quickly as possible to score points</li>
-                    <li>Frogs disappear after a short time - click them before they vanish!</li>
-                    <li>Higher difficulty means frogs appear faster and stay shorter</li>
-                    <li>Your score and time remaining are displayed at the top</li>
-                </ol>
-            </div>
-        </div>
-
-        <div class="demo-section">
             <h2>🎮 Game Interface</h2>
             <div class="game-container">
                 <div class="controls">
@@ -473,7 +457,7 @@
                         <div class="toggle-switch active" id="soundToggle"></div>
                     </div>
 
-                    <button class="btn-primary" id="startBtn">Start Game</button>
+                    <button class="btn-primary" id="startBtn" style="padding: 10px 20px; font-size: 0.9em;">Start Game</button>
                     <button class="btn-secondary" id="resetBtn" style="display: none;">Reset</button>
                 </div>
 
@@ -497,6 +481,22 @@
                 </div>
 
                 <div class="status-message" id="statusMessage"></div>
+            </div>
+        </div>
+
+        <div class="demo-section">
+            <h2>📖 How to Play</h2>
+            <div class="instructions">
+                <h3>Game Rules:</h3>
+                <ol>
+                    <li>Select your preferred difficulty level (Easy, Medium, Hard)</li>
+                    <li>Click the "Start Game" button to begin</li>
+                    <li>Watch for frogs to pop up in the holes</li>
+                    <li>Click on each frog as quickly as possible to score points</li>
+                    <li>Frogs disappear after a short time - click them before they vanish!</li>
+                    <li>Higher difficulty means frogs appear faster and stay shorter</li>
+                    <li>Your score and time remaining are displayed at the top</li>
+                </ol>
             </div>
         </div>
 
