--- a/src/snaker.html
+++ b/src/snaker.html
@@ -93,20 +93,20 @@
                 </div>
             </div>
 
-            <div class="difficulty-selector">
-                <button class="difficulty-btn active" data-difficulty="easy">Easy</button>
-                <button class="difficulty-btn" data-difficulty="medium">Medium</button>
-                <button class="difficulty-btn" data-difficulty="hard">Hard</button>
-            </div>
-
             <div class="controls">
-                <button class="btn-primary" id="startBtn">Start Game</button>
+                <button class="btn-primary" id="startBtn" style="padding: 10px 20px; font-size: 0.9em;">Start Game</button>
                 <button class="btn-secondary" id="pauseBtn">Pause</button>
                 <button class="btn-secondary" id="resetBtn">Reset</button>
             </div>
 
             <div class="info-panel">
                 <strong>Controls:</strong> Use <strong>Arrow Keys</strong> or <strong>WASD</strong> to move. Eat food to grow. Avoid walls and yourself!
+            </div>
+
+            <div class="difficulty-selector">
+                <button class="difficulty-btn active" data-difficulty="easy">Easy</button>
+                <button class="difficulty-btn" data-difficulty="medium">Medium</button>
+                <button class="difficulty-btn" data-difficulty="hard">Hard</button>
             </div>
         </div>
     </div>
