--- a/src/space-invaders.html
+++ b/src/space-invaders.html
@@ -252,6 +252,9 @@
             <button class="control-btn" id="btnRight">▶</button>
         </div>
 
+        <button class="action-btn" id="startBtn" style="padding: 10px 20px; font-size: 0.9em;">[ START GAME ]</button>
+        <button class="action-btn hidden" id="restartBtn" style="padding: 10px 20px; font-size: 0.9em;">[ PLAY AGAIN ]</button>
+
         <div class="game-info">
             <h3>HOW TO PLAY</h3>
             <p>← → Arrow keys to move | SPACE to fire</p>
@@ -263,9 +266,6 @@
                 <div class="alien-type"><span>🛸</span><br>???</div>
             </div>
         </div>
-
-        <button class="action-btn" id="startBtn">[ START GAME ]</button>
-        <button class="action-btn hidden" id="restartBtn">[ PLAY AGAIN ]</button>
 
         <div class="keyboard-hint">
             Press SPACE to start
