--- a/src/rat_bushwick.html
+++ b/src/rat_bushwick.html
@@ -544,14 +544,8 @@
         <!-- Mini Game Section - FEATURED -->
         <div class="mini-game" style="margin-bottom: 40px;">
             <h2 style="font-family: 'Courier Prime', monospace; color: #ff006e; margin-bottom: 20px; font-size: 2em;">🎮 PIZZA COLLECTOR 🎮</h2>
-            <p style="margin-bottom: 15px; font-size: 1.2em;">Collect 🍕 pizza! Avoid 🐱 cats! Grab 🧀 cheese for speed! Press SPACE or tap HIDE to escape!</p>
             <div class="game-canvas" id="gameCanvas" style="max-width: 500px; height: 400px;"></div>
-            <div class="game-stats" style="display: flex; gap: 20px; justify-content: center; margin: 15px 0; font-size: 1.2em;">
-                <span style="color: #ffbe0b;">Score: <span id="gameScore">0</span></span>
-                <span style="color: #ff006e;">Lives: <span id="gameLives">3</span></span>
-                <span style="color: #7ec8e3;">Level: <span id="gameLevel">1</span></span>
-            </div>
-            <button class="btn" onclick="startGame()" style="font-size: 1.2em; padding: 15px 30px;">START GAME</button>
+
             <!-- Mobile Controls -->
             <div class="mobile-game-controls" id="mobileGameControls">
                 <div class="control-row">
@@ -564,6 +558,16 @@
                 </div>
                 <button class="game-control-btn" id="hideBtn" style="grid-column: 1 / -1; margin-top: 8px; background: rgba(255, 85, 255, 0.3); border-color: #ff55ff; color: #ff55ff;">🫣 HIDE</button>
             </div>
+
+            <div class="game-stats" style="display: flex; gap: 20px; justify-content: center; margin: 15px 0; font-size: 1.2em;">
+                <span style="color: #ffbe0b;">Score: <span id="gameScore">0</span></span>
+                <span style="color: #ff006e;">Lives: <span id="gameLives">3</span></span>
+                <span style="color: #7ec8e3;">Level: <span id="gameLevel">1</span></span>
+            </div>
+
+            <button class="btn" onclick="startGame()" style="font-size: 0.9em; padding: 10px 20px;">START GAME</button>
+
+            <p style="margin-top: 15px; font-size: 1.1em; color: #00ff9f;">Collect 🍕 pizza! Avoid 🐱 cats! Grab 🧀 cheese for speed! Press SPACE or tap HIDE to escape!</p>
         </div>
 
         <h2 style="font-family: 'Courier Prime', monospace; color: #ff006e; text-align: center; margin: 40px 0 30px; font-size: 1.8em; border-top: 2px solid #7ec8e3; padding-top: 30px;">🧩 RAT BRAIN TEASERS 🧩</h2>
